[package]
name = "simple-bitrange"
version = "0.1.0"
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["enable-inline"]
enable-inline = []
never-inline = []
