[package]
name = "simple-bitrange"
version = "0.1.1"
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
categories = [
    "data-structures",
    "no-std",
]
description = "A simple crate for manipulating bit ranges which is common when working with IC registers."
documentation = "https://docs.rs/simple_bitrange"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/korken89/simple-bitrange-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["enable-inline"]
enable-inline = []
never-inline = []
